Fix icons on iPhone

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -5973,6 +5973,7 @@ h1, h2, h3, h4, h5 {
         display: none; } }
     #sockstagram #sockstagram-gallery-hldr p {
       font-size: 14px;
+      max-width: 612px;
       padding-top: 20px;
       text-align: center; }
       @media (max-width: 479px) {
