--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -663,6 +663,7 @@
 
 				p {
 					font-size: 14px;
+					max-width: 612px;
 					padding-top: 20px;
 					text-align: center;
 					@media (max-width: ($screen-xs-min - 1) ) { span { display: none; } }
